; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_dbghelp.c_process_find_by_handle.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_dbghelp.c_process_find_by_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.process = type { i64, %struct.process* }

@process_first = common dso_local global %struct.process* null, align 8
@ERROR_INVALID_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.process* @process_find_by_handle(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.process*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load %struct.process*, %struct.process** @process_first, align 8
  store %struct.process* %4, %struct.process** %3, align 8
  br label %5

5:                                                ; preds = %17, %1
  %6 = load %struct.process*, %struct.process** %3, align 8
  %7 = icmp ne %struct.process* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %5
  %9 = load %struct.process*, %struct.process** %3, align 8
  %10 = getelementptr inbounds %struct.process, %struct.process* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* %2, align 8
  %13 = icmp ne i64 %11, %12
  br label %14

14:                                               ; preds = %8, %5
  %15 = phi i1 [ false, %5 ], [ %13, %8 ]
  br i1 %15, label %16, label %21

16:                                               ; preds = %14
  br label %17

17:                                               ; preds = %16
  %18 = load %struct.process*, %struct.process** %3, align 8
  %19 = getelementptr inbounds %struct.process, %struct.process* %18, i32 0, i32 1
  %20 = load %struct.process*, %struct.process** %19, align 8
  store %struct.process* %20, %struct.process** %3, align 8
  br label %5

21:                                               ; preds = %14
  %22 = load %struct.process*, %struct.process** %3, align 8
  %23 = icmp ne %struct.process* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %21
  %25 = load i32, i32* @ERROR_INVALID_HANDLE, align 4
  %26 = call i32 @SetLastError(i32 %25)
  br label %27

27:                                               ; preds = %24, %21
  %28 = load %struct.process*, %struct.process** %3, align 8
  ret %struct.process* %28
}

declare dso_local i32 @SetLastError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
